syntax = "proto3";
package prismfinance.prismcore.treasury;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "prismcore/treasury/params.proto";
import "prismcore/treasury/action.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/prism-finance/prism-core/x/treasury/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/prism-finance/prism-core/treasury/params";
  }
  // Queries a Action by index.
  rpc Action(QueryGetActionRequest) returns (QueryGetActionResponse) {
    option (google.api.http).get = "/prism-finance/prism-core/treasury/action";
  }

  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetActionRequest {
}

message QueryGetActionResponse {
  Action action = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
